# wordsearch

./: .gitignore  README.md  pyproject.toml
wordsearch/: __main__.py  _english_words.py
